<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_country_code">Country Code</string>
    <string name="hint_artist_search">Search Artist...</string>
    <string name="no_artists_found">No Artists Found</string>
    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="no_tracks_found">No tracks found for this artist</string>
    <string name="please_wait_artist">Retrieving artist...</string>
    <string name="please_wait_title">Please wait...</string>
    <string name="please_wait_artist_message">Retrieving Artist...</string>
    <string name="please_wait_tracks">Retrieving tracks...</string>
    <string name="network_unavailable">No current networks detected</string>
    <string name="cont_desc_notification_icon">Notification Icon</string>
    <string name="cont_desc_play_pause">Play or Pause</string>
    <string name="cont_desc_fast_forward">Fast Forward</string>
    <string name="cont_desc_rewind">Rewind</string>
    <string name="cont_desc_stop">Stop</string>
    <string name="preparing_audio_message">Preparing Audio File…</string>
    <string name="preparing_audio_title">Streaming</string>
    <string name="cont_desc_previous">Previous</string>
    <string name="cont_desc_next">Next</string>
    <string name="enter_country_code">Select Country Code:</string>
    <string name="confirm_country_code_changed">Country code has been changed to:</string>
    <string name="action_now_playing">Now Playing</string>
</resources>
